<resources>
    <string name="app_name">Store Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Store Manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete_meal">Delete</string>

    <!-- cardview_menu_row -->
    <string name="titleMeal">Meal Title</string>
    <string name="priceMeal">Meal Price</string>

    <!-- mobile_navigation -->
    <string name="menu_addMeal">Add Meals</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_foodList">Menu List</string>
    <string name="menu_foodDetails">About Food</string>
    <string name="menu_out">Checkout</string>

    <!-- fragment_add_meal -->
    <string name="prompt_food">Meal</string>
    <string name="prompt_price">$0.00</string>

    <string name="action_price_in_short">$5.00</string>
    <string name="action_send_meal">Add Meal</string>

    <!-- fragment_order -->
    <string name="view_menu">Menu</string>
    <string name="popular_text">Popular</string>


    <!-- cart_fragment -->
    <string name="cartTitle">Customer Cart</string>
    <string name="itemTotal">Total</string>
    <string name="outBtn">Checkout</string>

    <!-- fragment_show_food_details -->
    <string name="addBth">+</string>
    <string name="takeBtn">-</string>
    <string name="discript">Description</string>
    <string name="addCart">Add to Cart</string>

    <string name="profits">Profits</string>
    <string name="month">Month</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Title</string>
    <string name="Date">Date</string>
    <string name="spendings">Spendings</string>
    <string name="save">Save</string>
    <string name="add_funds">Add Funds</string>
</resources>