<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order_icon"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_addFoods"
            android:icon="@drawable/add_meal_icon"
            android:title="@string/menu_addMeal" />
        <item
            android:id="@+id/nav_funds"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/add_funds" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/checkout"
            android:title="@string/outBtn"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/icon_trend"
            android:title="@string/menu_stats" />
    </group>
</menu>