<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders">

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.storemanager.ui.order.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order">
    </fragment>
    <fragment
        android:id="@+id/nav_addFoods"
        android:name="com.example.storemanager.ui.add_meals.AddMealFragment"
        android:label="@string/menu_addMeal"
        tools:layout="@layout/fragment_add_meal"/>
    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.storemanager.ui.statistics.StatisticFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_statistics"/>
    <fragment
        android:id="@+id/nav_menu_list"
        android:name="com.example.storemanager.ui.order.MenuListFragment"
        android:label="@string/menu_foodList"
        tools:layout="@layout/cardview_menu_list"/>
    <fragment
        android:id="@+id/nav_food_details"
        android:name="com.example.storemanager.ui.order.ShowFoodDetailsFragment"
        android:label="@string/menu_foodDetails"
        tools:layout="@layout/fragment_show_food_details"/>
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.storemanager.ui.order.CartFragment"
        tools:layout="@layout/cart_fragment"/>
</navigation>