<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.ShowFoodDetailsFragment"
    android:background="#FBFAFA">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meal_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_blank_fragment"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meal_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_forFood"
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:background="@android:color/darker_gray"
                android:src="@drawable/fast_food" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minusBtn"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/takeBtn" />

                <TextView
                    android:id="@+id/text_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plusBtn"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addBth" />

            </LinearLayout>

            <TextView
                android:id="@+id/decription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/discript"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/leave_alone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="top"
                android:maxLength="4096"
                android:maxLines="6"
                android:minLines="6"
                android:padding="10dip"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:typeface="monospace"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/addCartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addCart" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>